tests/snapshots/examples_fixtures/primop__maps.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/maps.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:1:1
  |
1 | print("== PrimOps: maps ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/primop/maps.flx:1:1
  |
1 | print("== PrimOps: maps ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:5:1
  |
5 | print(is_map(m2));
  | ^^^^^^^^^^^^^^^^^^
  | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:6:1
  |
6 | print(has_key(m2, "name"));
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:7:1
  |
7 | print(get(m2, "name"));
  | ^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:8:1
  |
8 | print(keys(m2));
  | ^^^^^^^^^^^^^^^^
  | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:9:1
  |
9 | print(values(m2));
  | ^^^^^^^^^^^^^^^^^^
  | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:10:1
   |
10 | print(delete(m2, "year"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:11:1
   |
11 | print(merge(m2, put({}, "lang", "en")));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:13:1
   |
13 | print(map_has(m2, "name"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:14:1
   |
14 | print(map_get(m2, "name"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/maps.flx:16:1
   |
16 | print(map_get(m3, "kind"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 12 errors.
== stdout ==
<not executed>
